# signal

./: .env.example  .gitignore  CASE_STUDY.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  ROADMAP.md  modal_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh-snapshot.yml
examples/: governed_support_bot.py
scripts/: build_snapshot.py
signal/: __init__.py
signal/governance/: decision_log.py
signalkit/: __init__.py  api.py  ratelimit.py
signalkit/analyst/: __init__.py  core.py  eval.py  stats.py
signalkit/data/: __init__.py  catalogue.py  nyc.py  nypd.py  sa_crime.py
signalkit/data/sample/: nyc_monthly.json  nypd_monthly.json  sa_crime_monthly.json
signalkit/governance/: README.md  __init__.py  audit_store.py  compliance.py  decision_log.py  sdk.py  tenancy.py
signalkit/static/: index.html
tests/: conftest.py  test_analyst.py  test_api.py  test_audit_store.py  test_catalogue.py  test_compliance.py  test_data.py  test_decision_log.py  test_eval.py  test_fairness.py  test_faithfulness_validation.py  test_governance_package.py  test_impact_assessment.py  test_llm.py  test_logging_invariant.py  test_multistep.py  test_ratelimit.py  test_sdk.py  test_stats.py  test_tamper_evidence.py  test_tenancy.py
