[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalkit"
version = "0.5.0"
description = "Signal: interactive US public-data product with an LLM analyst layer and an APS/EU-AI-Act aligned governance log"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sunchuangyu Huang (Rin)" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/rNLKJA/signal"

[tool.hatch.build.targets.wheel]
packages = ["signalkit"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
