[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalkit"
version = "0.12.0"
description = "Signal: interactive South Australian crime-data product with an LLM analyst layer and an APS/EU-AI-Act aligned governance log"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sunchuangyu Huang (Rin)" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
# httpx2 is the test client's preferred transport: Starlette's TestClient
# deprecates legacy httpx in favour of httpx2, so installing it keeps the
# suite warning-clean. Runtime code still uses httpx (see dependencies).
dev = ["pytest>=8", "ruff>=0.4", "httpx2>=2.4"]

[project.urls]
Repository = "https://github.com/rNLKJA/signal"

[tool.hatch.build.targets.wheel]
packages = ["signalkit"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
